fixes bookshelf dropdown dimensions on mobile

--- a/root/src/css/style.css
+++ b/root/src/css/style.css
@@ -2246,10 +2246,9 @@ a, p, input[type=text], label, button {
     .dropdown-content {
         position: absolute;
         top: 107%;
-        left: 0;
-        width: 183.92px;
-        /* width: 190px; */
-        height: 230px;
+        left: -315%;
+        width: 172.84px;
+        height: 205px;
         background: #545454;
         border: 0.5px solid #c7c7c7;
         border-radius: 2px;
@@ -2366,17 +2365,22 @@ a, p, input[type=text], label, button {
     .dropdown-bottom-btns {
         position: relative;
         display: block;
-        width: 163.92px;
+        width: 172.84px;
         /* width: 170px; */
+        height: 45px;
         border: none;
         border-radius: 2px;
-        padding: 10px;
+        padding: 8px 10px;
+        box-sizing: border-box;
         border-top: 1px solid rgb(193, 199, 207, 0.748);
     }
 
     .add-shelf-btn {
+        width: 100%;
+        height: 100%;
         display: inline-block;
         background-color: #545454;
+        border-radius: 10px;
     }
 
     .show-input-btn.hide {
@@ -2388,12 +2392,10 @@ a, p, input[type=text], label, button {
     }
 
     .input-container.show {
+        width: 100%;
         display: flex;
-        width: 163.92px;
-        /* width: 170px; */
         gap: 5px;
         justify-content: space-between;
-        /* margin-bottom: 5px; */
     }
 
     .show-input-btn, .done-btn, .create-shelf-name, .create-shelf-btn {
@@ -2407,14 +2409,14 @@ a, p, input[type=text], label, button {
         text-align: center;
         border: 1px solid #c7c7c7;
         border-radius: 10px;
-        /* border: none;
-        border-radius: 2px; */
     }
 
     .show-input-btn, .done-btn {
+        width: 100%;
+        height: 100%;
         display: block;
-        width: 163.92px;
-        /* width: 170px; */
+        margin: auto;
+        padding: 0;
         cursor: pointer;
     }
 
